[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Baht_blob.png" type="Texture" id=1]
[ext_resource path="res://BahtBlob.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Spawn",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 7 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.686627, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="BahtBlob" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 5 )
animation = "Spawn"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -7 )
shape = SubResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
amount = 4
explosiveness = 0.34
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
color = Color( 1, 0.964706, 0.905882, 1 )
color_ramp = SubResource( 7 )
hue_variation = 0.05
hue_variation_random = 0.23

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 3, -15 )

[connection signal="body_entered" from="." to="." method="_on_BahtBlob_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
